--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,35 +1,38 @@
-.logo__img{
+.logo__img {
     width: 80px;
     height: 80px;
 }
 
-.logo__text{
+.logo__text {
     font-family: 'Montserrat', sans-serif;
     font-size: 3.7vh;
     padding-left: 1vw;
-    color: #FB4D94; 
-}
-.navbar--custom{
-    background: rgba(0, 0, 0, 0.77)!important;
+    color: #FB4D94;
 }
 
-.navbar-nav--custom{
-    margin-left: auto!important;
-    margin-right: 0!important;
+.navbar--custom {
+    background: rgba(0, 0, 0, 0.77) !important;
 }
 
-.sticker-custom{
+.navbar-nav--custom {
+    margin-left: auto !important;
+    margin-right: 0 !important;
+}
+
+.sticker-custom {
     margin-left: 5vw;
 }
 
-.search-bar-custom__button, .search-bar-custom__input{
+.search-bar-custom__button,
+.search-bar-custom__input {
     height: 40px;
     background: transparent;
     box-sizing: border-box;
     border: 4px solid #FB4D94;
-    
+
 }
-.search-bar-custom__input{
+
+.search-bar-custom__input {
     margin-left: 7vw;
 
     border-right: 0px;
@@ -41,38 +44,40 @@
 
 }
 
-.search-bar-custom__button{
+.search-bar-custom__button {
     border-left: 0px;
     border-bottom-right-radius: 8px;
     border-top-right-radius: 8px;
 }
 
-.search-bar-custom__input::placeholder { 
-    color:rgba(255, 255, 255, 0.6);
+.search-bar-custom__input::placeholder {
+    color: rgba(255, 255, 255, 0.6);
     font-family: 'Roboto', sans-serif;
     font-size: 1.8vh;
-  }
+}
 
 
 
 /*Home page*/
-.welcome-screen{
+/*welcome screen*/
+.welcome-screen {
     position: relative;
 }
-.welcome-screen__img{
+
+.welcome-screen__img {
     object-fit: cover;
     height: 100vh;
     width: 100vw;
     filter: saturate(10%) contrast(100%) brightness(40%);
 }
 
-.welcome-screen__title{
+.welcome-screen__title {
     position: absolute;
     top: 40vh;
     right: 9.1vh;
 
     font-family: 'Montserrat', sans-serif;
-    font-style:normal;
+    font-style: normal;
     font-size: 14vh;
     text-align: right;
     white-space: nowrap;
@@ -81,7 +86,7 @@
     color: #FFFFFF;
 }
 
-.welcome-screen__subtitle{
+.welcome-screen__subtitle {
     position: absolute;
     top: 55vh;
     right: 10vh;
@@ -93,45 +98,59 @@
     color: #FB4D94;
 }
 
-.welcome-screen__form{
+.welcome-screen__form {
     text-align: right;
     position: absolute;
     top: 72vh;
     right: 10vh;
 }
 
-.welcome-screen__form > input[type=text], .welcome-screen__form > input[type=password] {
+.welcome-screen__form>input[type=text],
+.welcome-screen__form>input[type=password] {
     background: rgba(255, 255, 255, 0.25);
     border-radius: 8px;
     width: 10vw;
     height: 4.8vh;
     border: 0px;
     padding-left: 1vw;
-    color:#FFFFFF;
+    color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
     font-size: 2vh;
 
 }
 
-.welcome-screen__form > input[type=text]::placeholder, .welcome-screen__form > input[type=password]::placeholder { 
-    color:#FFFFFF;
+.welcome-screen__form>input[type=text]::placeholder,
+.welcome-screen__form>input[type=password]::placeholder {
+    color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
     font-size: 1.8vh;
-  }
+}
 
-.welcome-screen__form > input[type=submit] {
+.welcome-screen__form>input[type=submit] {
     background: rgba(231, 66, 133, 0.21);
     border: 2px solid #FB4D94;
     box-sizing: border-box;
     border-radius: 8px;
-    color:#FFFFFF;
+    color: #FFFFFF;
 
 }
 
-.welcome-screen__form > p {
+.welcome-screen__form>p {
     margin-top: 1vh;
-    color:#FFFFFF;
+    color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
     font-size: 1.9vh;
 }
 
+/*best sellers*/
+.best-sellers {
+    height: 50vh;
+}
+
+/*new products*/
+
+.img-custom-fullwidth {
+    object-fit: cover;
+    height: 100vh;
+    width: 100vw;
+}
