user table can be display in back office

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,3 +177,13 @@
     width: 100vw;
     filter: saturate(30%);
 }
+
+
+/* ------------------ */
+/* Back office page */
+/* ------------------ */
+
+.bo-input {
+    width: 100px;
+}
+
