--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 .logo__img {
-    width: 80px;
-    height: 80px;
+    width: 150px;
+    height: 150px;
 }
 
 .logo__text {
@@ -138,6 +138,8 @@
 
 }
 
+
+
 .welcome-screen__form>p {
     margin-top: 1vh;
     color: #FFFFFF;
@@ -145,11 +147,125 @@
     font-size: 1.9vh;
 }
 
+/*inscription*/
+
+.inscription-screen__title {
+    font-family: 'Roboto', sans-serif;
+}
+
+
+.titreinscription {
+    padding: 3vh 0 0 6vw;
+    font-family: 'Roboto', sans-serif;
+    color: #FFFFFF;
+    font-size: 50px;
+    width: 100%;
+}
+
+.coldroite {
+    width: 30%;
+    padding: 8vh 0 0 0;
+    color: #FFFFFF;
+}
+
+.coldroite>p {
+    font-size: large;
+    width: 80%;
+    text-align: justify;
+}
+
+.colgauche {
+    width: 70%;
+    align-items: center;
+    justify-content: center;
+}
+
+.conteneur-bg {
+    background-color: #fb4d93bb;
+    width: auto;
+    height: auto;
+    display: flex;
+
+}
+
+.boutoninscription {
+    background: rgba(231, 66, 133, 0.21);
+    border: 2px solid #eb2a77;
+    box-sizing: border-box;
+    border-radius: 8px;
+    color: #FFFFFF;
+    padding: 2vh;
+    margin-top: 2vh;
+
+}
+
+.inscription {
+    width: 5vw;
+    height: 4vh;
+}
+
+.ligne {
+    display: flex !important;
+    width: 60vw;
+    margin: 2vh 0 0 0;
+}
+
+.form-floating {
+    width: 100%;
+
+}
+
+.ligneb {
+    display: flex;
+    width: 60vw;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.form-user {
+    margin: 0 0 0 5vw;
+    display: flex;
+    flex-direction: column;
+    width: 10vw;
+    height: 70vh;
+
+
+}
+
+
+.inscription-screen {
+    position: relative;
+}
+
+.inscription-screen__img {
+    object-fit: cover;
+    height: 40vh;
+    width: 100%;
+
+}
+
+
+.inscription-screen__title {
+    position: absolute;
+    top: 24vh;
+    right: 9.1vh;
+
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-size: 4vw;
+    text-align: right;
+    white-space: nowrap;
+
+
+    color: #FFFFFF;
+}
+
 /*best sellers*/
 .best-sellers {
     padding-top: 5vh;
     padding-bottom: 5vh;
 }
+
 
 .best-sellers__title {
     padding-bottom: 5vh;
@@ -181,6 +297,13 @@
     filter: saturate(30%);
 }
 
+.container-user {
+    height: 100%;
+    width: 20vw;
+
+}
+
+
 
 /* ------------------ */
 /* Back office page */
@@ -194,4 +317,62 @@
     object-fit: cover;
     width: 100%;
     height: 100px;
+}
+
+#myTab {
+    margin: 10% 0 0 10%;
+}
+
+.tab-content {
+    margin: 5% 0 0 5%;
+}
+
+image-inscription {
+    height: 100%;
+    width: 100%;
+}
+
+/* footer */
+
+.logo {
+    background-image: url("../img/logofooter.png");
+    background-size: cover;
+
+    height: 350px;
+    width: 350px;
+}
+
+footer {
+    display: flex;
+    font-family: 'Roboto', sans-serif;
+
+
+    height: auto;
+    width: 100vw;
+    background-color: black;
+}
+
+.searchbarfooter {
+    margin: 0;
+}
+
+#caracterefooter>a {
+    font-size: 3vh;
+    color: #ffffff;
+
+}
+
+#caracterelienfooter>a {
+    font-size: 3vh;
+    color: #FB4D94;
+}
+
+.padding {
+    padding: 5% 0 5% 0;
+}
+
+#footercentrer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
