--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,6 +195,7 @@
     height: auto;
     display: flex;
 
+    background-image: url("https://www.transparenttextures.com/patterns/bright-squares.png");
 }
 
 .boutoninscription {
